...
                        .accessibilityIdentifier("signupMessage")
                    VStack (spacing: 15) {
                        TextField("Email", text: $email)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .padding(.horizontal)
                            .autocapitalization(.none)
                            .accessibility(identifier: "signupUsernameTextField")
                        
                        SecureField("Password", text: $password)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .padding(.horizontal)
                            .accessibility(identifier: "signupPasswordSecureField")
                        
                        TextField("Display Name", text: $displayName)
                            .textFieldStyle(RoundedBorderTextFieldStyle())
                            .padding(.horizontal)
                            .autocapitalization(.none)
                            .accessibility(identifier: "signupDisplayNameTextField")
                    }
                    

                    Button("Continue") {
                        if email.isEmpty || password.isEmpty || displayName.isEmpty {
                            vm.signupMessage = "Please fill all fields"
...
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Color.blue)
                    .foregroundColor(.white)
                    .cornerRadius(10)
                    .padding()
                    .accessibility(identifier: "signupContinueButton")
                    
                    NavigationLink(destination: LoginView(vm: vm)) {
                        HStack {
                            Text("Have an account?")
                                .foregroundColor(.gray)
                            Text("Login")
...
